--- a/client/app.json
+++ b/client/app.json
@@ -10,11 +10,11 @@
   ],
   "entryPagePath":"pages/index/index",
   "window": {
-    "backgroundColor": "#F6F6F6",
+    "backgroundColor": "#f5f6f7",
     "backgroundTextStyle": "light",
-    "navigationBarBackgroundColor": "#F6F6F6",
-    "navigationBarTitleText": "kelly小店",
-    "navigationBarTextStyle": "black"
+    "navigationBarBackgroundColor": "#ee0a24",
+    "navigationBarTitleText": "Kelly海外代购",
+    "navigationBarTextStyle": "white"
   },
   "tabBar": {
     "color": "#000000",
