引入计算属性

--- a/client/app.json
+++ b/client/app.json
@@ -5,6 +5,7 @@
     "pages/cart/index",
     "pages/user/index",
     "pages/productList/index",
+    "pages/product/index",
     "pages/order/index"
   ],
   "entryPagePath":"pages/index/index",
