--- a/client/package.json
+++ b/client/package.json
@@ -9,6 +9,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "@vant/weapp": "^1.5.1"
+    "@vant/weapp": "^1.5.1",
+    "miniprogram-computed": "^2.1.1"
   }
 }
